# rs-changelog

./: CHANGELOG.md  Cargo.toml  README.md  mise.toml  rust-toolchain.toml
.github/workflows/: build.yml
lib/assemble/: Cargo.toml
lib/assemble/src/: changelog.rs  clast_utils.rs  description.rs  error.rs  lib.rs  test_utils.rs  title.rs
lib/ast/: Cargo.toml
lib/ast/src/: document.rs  internal.rs  leaf.rs  lib.rs  markdown.rs  node.rs  node_children_iterator.rs  parse.rs  segment.rs  unwrap_singleton.rs
lib/ast/tests/: spec.rs
lib/clast/: Cargo.toml
lib/clast/src/: changelog.rs  convert.rs  description.rs  error.rs  lib.rs  link.rs  position.rs  release.rs  text.rs  title.rs
lib/clast/src/change/: change.rs  change_kind.rs  change_set.rs  changes.rs  mod.rs
lib/clast/src/error/: mod.rs  parse_error.rs
lib/clast/src/markdown/: error.rs  mod.rs  node.rs  node_kind.rs  parse.rs
lib/clast/src/node/: convert.rs  kind.rs  mod.rs  nodes.rs
lib/clast/tests/: smoke.rs
lib/date/: Cargo.toml
lib/date/src/: date.rs  lib.rs
lib/line/: Cargo.toml  README.md
lib/line/src/: by_lines.rs  lib.rs  line_slice.rs  lines.rs
lib/location/: Cargo.toml
lib/location/src/: error.rs  lib.rs  location.rs  position.rs  span.rs
lib/maybe_display/: Cargo.toml
lib/maybe_display/src/: lib.rs
lib/mdast/: Cargo.toml
lib/mdast/src/: convert.rs  lib.rs  mdast.rs  utils.rs
lib/mdast/src/error/: io.rs  markdown.rs  mod.rs
lib/mdast/src/node/: align_kind.rs  kind.rs  mod.rs  node.rs  reference_kind.rs
lib/mdast/tests/: smoke.rs
lib/segment/: Cargo.toml  README.md
lib/segment/src/: lib.rs  line.rs  segment.rs  (+3 more)
lib/stack/: Cargo.toml
lib/test_utils/: Cargo.toml
resources/: BLANK_LINE_BETWEEN_CHANGES_CHANGELOG.md  DANGLING_LINK_CHANGELOG.md  DOUBLE_PARAGRAPH_CHANGELOG.md  MISSING_RELEASES_CHANGELOG.md  UNORDERED_LINKS_CHANGELOG.md
src/: ast.rs  debug.rs  lib.rs  linter.rs  main.rs
src/changelog/: changelog.rs  changes.rs  description.rs  error.rs  link.rs  mod.rs  position.rs  release.rs  title.rs
src/lint/: mod.rs  ordered_change_set.rs  ref_def_linters.rs  version_gap.rs
src/parse/: ast.rs  changelog.rs  error.rs  invalid_heading.rs  mod.rs  node_ext.rs  parser.rs  reference_definition.rs  rules.rs  title.rs
tests/: parse.rs  smoke.rs  utils.rs  validation.rs
tests/resources/: MINIMAL_CHANGELOG.md  MISSING_LINK_CHANGELOG.md  UNORDERED_RELEASES_CHANGELOG.md
(+153 files in other folders)
